<resources>
    <string name="app_name">GithubRepositoryTest</string>
    <string name="repository_details">Repository Details</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="github_link">Show on github</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="no_date_found">No Data Found!</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="filter">Filter</string>
    <string name="repository_filter">Repository filter</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_day">Last Day</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="you_back_online">You back online</string>
</resources>