<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.repositoryDetails.RepositoryDetailsActivity">

        <TextView
            android:id="@+id/tvTitleLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/font_semi_bold"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/repository_filter"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            style="@style/MaterialButtonIconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/actionBarItemBackground"
            app:icon="@drawable/ic_close_circle"
            app:iconSize="24dp"
            app:iconTint="@color/gray_57"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvLastDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/font_regular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingVertical="6dp"
            android:text="@string/last_day"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLbl" />

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@color/gray_8A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastDay" />

        <TextView
            android:id="@+id/tvLastWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/font_regular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingVertical="6dp"
            android:text="@string/last_week"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator1" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@color/gray_8A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastWeek" />

        <TextView
            android:id="@+id/tvLastMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/font_regular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingVertical="6dp"
            android:text="@string/last_month"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastMonth" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>